--- a/pom.xml
+++ b/pom.xml
@@ -89,4 +89,21 @@
 	    <version>1.6.1</version>
 	</dependency>	    
   </dependencies>
+    <!-- TestNG Xml File Excution -->
+	<build>
+		<plugins>
+			<!-- Below plug-in is used to execute tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<suiteXmlFiles>
+						<!-- TestNG suite XML files -->
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
